@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 1.3 - 4/21/2011
 
+* NUTCH 986 SolrDedup fails due to date incorrect format (markus)
+
 * NUTCH-977 SolrMappingReader uses hardcoded configuration parameter name for mapping file (markus)
 
 * NUTCH-976 Rename properties solrindex.* to solr.* (markus)
